--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin></script>
-    
+      <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <script src = "/libs/p5.js"></script>
     <script src = "/canvas.js" defer></script>
     <title>Markus</title>
